magu.java
/* magu.java */
/* Generated By:JavaCC: Do not edit this line. magu.java */
import java.util.*;

class magu implements maguConstants {

        public static void main(String[] args) throws ParseException
        {
                try
                {
                        magu scanner = new magu(System.in);
                        scanner.Programa();
                        System.out.println("OK!");
                }
                catch(ParseException e)
                {
                        System.out.println(e.getMessage());
                        System.out.println("Error!");
                }
        }

        Stack pOperators = new Stack();
        Stack pOperands = new Stack();
        Stack pJumps = new Stack();

        Vector cuadruplos = new Vector(1);

        int currentTemporal  = 1;
        int quadCounter = 0;

  final public void Programa() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Asignacion();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_FUNC:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      Definicion_Func();
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_ARR:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      Arreglo();
    }
    Secuencia();
    jj_consume_token(0);
MostrarCuadruplos();
  }

  final public void Func() throws ParseException {Token o, op1, op2, r;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_FORWARD:{
      o = jj_consume_token(TK_FORWARD);
      jj_consume_token(TK_LPAR);
      Exp();
      jj_consume_token(TK_RPAR);
Cuadruplo quad = new Cuadruplo();
                        quadCounter++;

                        quad.operador = o.image;
                        Cuadruplo.displayCuadruplo(quad);

                        cuadruplos.addElement(quad); // Agregarlo a la queue de cuadruplos

      break;
      }
    case TK_LEFT:{
      jj_consume_token(TK_LEFT);
      jj_consume_token(TK_LPAR);
      Exp();
      jj_consume_token(TK_RPAR);
      break;
      }
    case TK_RIGHT:{
      jj_consume_token(TK_RIGHT);
      jj_consume_token(TK_LPAR);
      Exp();
      jj_consume_token(TK_RPAR);
      break;
      }
    case TK_INPUT:{
      jj_consume_token(TK_INPUT);
      jj_consume_token(TK_LPAR);
      jj_consume_token(TK_ID);
      jj_consume_token(TK_RPAR);
      break;
      }
    case TK_PRINT:{
      jj_consume_token(TK_PRINT);
      jj_consume_token(TK_LPAR);
      if (jj_2_1(2)) {
        jj_consume_token(TK_ID);
        jj_consume_token(TK_LBRACKET);
        Exp();
        jj_consume_token(TK_RBRACKET);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TK_ID:{
          jj_consume_token(TK_ID);
          break;
          }
        case TK_STRING:{
          jj_consume_token(TK_STRING);
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TK_PLUS:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        jj_consume_token(TK_PLUS);
        if (jj_2_2(2)) {
          jj_consume_token(TK_ID);
          jj_consume_token(TK_LBRACKET);
          Exp();
          jj_consume_token(TK_RBRACKET);
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case TK_ID:{
            jj_consume_token(TK_ID);
            break;
            }
          case TK_STRING:{
            jj_consume_token(TK_STRING);
            break;
            }
          default:
            jj_la1[5] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      jj_consume_token(TK_RPAR);
      break;
      }
    case TK_PENCILUP:{
      jj_consume_token(TK_PENCILUP);
      jj_consume_token(TK_LPAR);
      jj_consume_token(TK_RPAR);
      break;
      }
    case TK_PENCILDOWN:{
      jj_consume_token(TK_PENCILDOWN);
      jj_consume_token(TK_LPAR);
      jj_consume_token(TK_RPAR);
      break;
      }
    case TK_MOVE:{
      jj_consume_token(TK_MOVE);
      jj_consume_token(TK_LPAR);
      Exp();
      jj_consume_token(TK_COMMA);
      Exp();
      jj_consume_token(TK_RPAR);
      break;
      }
    case TK_CURVE:{
      jj_consume_token(TK_CURVE);
      jj_consume_token(TK_LPAR);
      Exp();
      jj_consume_token(TK_COMMA);
      Exp();
      jj_consume_token(TK_RPAR);
      break;
      }
    case TK_HOME:{
      jj_consume_token(TK_HOME);
      jj_consume_token(TK_LPAR);
      jj_consume_token(TK_RPAR);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Funcion() throws ParseException {
    jj_consume_token(TK_ID);
    jj_consume_token(TK_LPAR);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_CTE_I:
    case TK_ID:{
      Exp();
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TK_COMMA:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_5;
        }
        jj_consume_token(TK_COMMA);
        Exp();
      }
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(TK_RPAR);
  }

  final public void Exp() throws ParseException {Token o, op1, op2;
    Termino();
    PendingOperator("+","-");
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_PLUS:
      case TK_MINUS:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_PLUS:{
        o = jj_consume_token(TK_PLUS);
pOperators.push(o.image); // meter el + a la stack de operadores

        Termino();
        PendingOperator("+","-");
        break;
        }
      case TK_MINUS:{
        o = jj_consume_token(TK_MINUS);
pOperators.push(o.image); // meter el - a la stack de operadores

        Termino();
        PendingOperator("+","-");
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Termino() throws ParseException {Token o;
    Factor();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_MULT:
      case TK_DIV:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_MULT:{
        o = jj_consume_token(TK_MULT);
pOperators.push(o.image); // meter el * a la stack de operadores

        Factor();
        PendingOperator("*","/");
        break;
        }
      case TK_DIV:{
        o = jj_consume_token(TK_DIV);
pOperators.push(o.image); // meter el / a la stack de operadores

        Factor();
        PendingOperator("*","/");
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Factor() throws ParseException {Token o;
    if (jj_2_3(2)) {
      //indice de arreglo
              //t = <TK_ID> <TK_LBRACKET> Exp() <TK_RBRACKET>
      
              //|
      
              // variable
              o = jj_consume_token(TK_ID);
pOperands.push(o.image); // meter el id a la stack de operandos

    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_CTE_I:{
        //constante
                o = jj_consume_token(TK_CTE_I);
pOperands.push(o.image); // meter la constante a la stack de operandos

        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Asignacion() throws ParseException {String o, op1; Token r;
    if (jj_2_4(2)) {
      // variable
              r = jj_consume_token(TK_ID);
      jj_consume_token(TK_EQ);
      Exp();
op1 = (String)pOperands.pop();

                Cuadruplo quad = new Cuadruplo("=", op1, " ", r.image);
                quadCounter++;

                //System.out.println("quadCounter: " + quadCounter);

                //Cuadruplo.displayCuadruplo(quad); 

                cuadruplos.addElement(quad); // Agregarlo a la queue de cuadruplos

    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_ID:{
        jj_consume_token(TK_ID);
        jj_consume_token(TK_LBRACKET);
        Exp();
        jj_consume_token(TK_RBRACKET);
        jj_consume_token(TK_EQ);
        Exp();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Bool() throws ParseException {Token o;
    Exp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_NE:
    case TK_EQT:
    case TK_LT:
    case TK_GT:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_LT:{
        o = jj_consume_token(TK_LT);
        Exp();
pOperators.push(o.image); // meter el < a la stack de operandos

        PendingOperatorBool();
        break;
        }
      case TK_GT:{
        o = jj_consume_token(TK_GT);
        Exp();
pOperators.push(o.image); // meter el > a la stack de operandos

        PendingOperatorBool();
        break;
        }
      case TK_NE:{
        o = jj_consume_token(TK_NE);
        Exp();
pOperators.push(o.image); // meter el <> a la stack de operandos

        PendingOperatorBool();
        break;
        }
      case TK_EQT:{
        o = jj_consume_token(TK_EQT);
        Exp();
pOperators.push(o.image); // meter el == a la stack de operandos

        PendingOperatorBool();
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      ;
    }
  }

  final public void Secuencia() throws ParseException {
    jj_consume_token(TK_LBRACE);
    if (jj_2_5(2)) {
      Funcion();
    } else if (jj_2_6(2)) {
      Func();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_WHILE:{
        While();
        break;
        }
      case TK_ID:{
        Asignacion();
        break;
        }
      case TK_IF:{
        Condicion();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TK_COMMA:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_8;
      }
      jj_consume_token(TK_COMMA);
      if (jj_2_7(2)) {
        Funcion();
      } else if (jj_2_8(2)) {
        Func();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TK_WHILE:{
          While();
          break;
          }
        case TK_ID:{
          Asignacion();
          break;
          }
        case TK_IF:{
          Condicion();
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(TK_RBRACE);
  }

  final public void While() throws ParseException {String op1, r;
    jj_consume_token(TK_WHILE);
pJumps.push("" + (quadCounter+1));
    jj_consume_token(TK_LPAR);
    Bool();
    jj_consume_token(TK_RPAR);
op1 = (String)pOperands.pop();

                Cuadruplo quadTrue = new Cuadruplo("GotoF", op1, " ", " ");
                quadCounter++;
                cuadruplos.addElement(quadTrue); // Agregarlo a la queue de cuadruplos
                pJumps.push("" + (quadCounter-1));
    Secuencia();
String end = (String)pJumps.pop();
                String retorno = (String)pJumps.pop();

                Cuadruplo quadFalse = new Cuadruplo("Goto", " ", " ", retorno);
                quadCounter++;
                cuadruplos.addElement(quadFalse); // Agregarlo a la queue de cuadruplos

                Fill ( Integer.parseInt(end), quadCounter);
  }

  final public void Definicion_Func() throws ParseException {
    jj_consume_token(TK_FUNC);
    jj_consume_token(TK_ID);
    jj_consume_token(TK_LPAR);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_ID:{
      jj_consume_token(TK_ID);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TK_COMMA:{
          ;
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          break label_9;
        }
        jj_consume_token(TK_COMMA);
        jj_consume_token(TK_ID);
      }
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(TK_RPAR);
    Secuencia();
  }

  final public void Condicion() throws ParseException {String op1, r;
    jj_consume_token(TK_IF);
    jj_consume_token(TK_LPAR);
    Bool();
    jj_consume_token(TK_RPAR);
op1 = (String)pOperands.pop();

                Cuadruplo quadTrue = new Cuadruplo("GotoF", op1, " ", " ");
                quadCounter++;

                //System.out.println("quadCounter: " + quadCounter);

                //Cuadruplo.displayCuadruplo(quadTrue);

                cuadruplos.addElement(quadTrue); // Agregarlo a la queue de cuadruplos

                pJumps.push("" + (quadCounter-1));
    Secuencia();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_ELSE:{
      jj_consume_token(TK_ELSE);
Cuadruplo quadFalse = new Cuadruplo("Goto", " ", " ", " ");
                quadCounter++;

                //System.out.println("quadCounter: " + quadCounter);


                //Cuadruplo.displayCuadruplo(quadFalse);

                cuadruplos.addElement(quadFalse); // Agregarlo a la queue de cuadruplos

                String falso = (String)pJumps.pop();
                pJumps.push("" + (quadCounter-1));

                //System.out.println("falso: " + falso);


                Fill ( Integer.parseInt(falso), quadCounter);
      Secuencia();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      ;
    }
String end = (String)pJumps.pop();

                //System.out.println("end: " + end);

                Fill ( Integer.parseInt(end), quadCounter);
  }

  final public void Arreglo() throws ParseException {
    jj_consume_token(TK_ARR);
    jj_consume_token(TK_ID);
    jj_consume_token(TK_LBRACKET);
    Exp();
    jj_consume_token(TK_RBRACKET);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TK_EQ:{
      jj_consume_token(TK_EQ);
      jj_consume_token(TK_LPAR);
      Exp();
      label_10:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case TK_COMMA:{
          ;
          break;
          }
        default:
          jj_la1[23] = jj_gen;
          break label_10;
        }
        jj_consume_token(TK_COMMA);
        Exp();
      }
      jj_consume_token(TK_RPAR);
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      ;
    }
  }

// --------- FUNCIONES AUXILIARES -------------  //


// Punto 4 y 5, si hay operadores pendientes...
  final public void PendingOperator(String operator1, String operator2) throws ParseException {String o, op1,  op2, r;
// Si la pila no esta vacía
                if( !pOperators.empty()) {

                        // Y el tope de la pila es alguno de los operadores mandados. +- o */
                        if ( pOperators.peek() == operator1 || pOperators.peek() == operator2  ) {

                                // Sacar los operandos y el operador de las pilas
                                op2 = (String)pOperands.pop();
                                op1 = (String)pOperands.pop();
                                o = (String)pOperators.pop();
                                r = "t" + currentTemporal;

                                currentTemporal++;

                                //System.out.println( r );

                                // Crear un cuadruplo y meterlos
                                Cuadruplo quad = new Cuadruplo(o, op1, op2, r);
                                quadCounter++;

                        pOperands.push(r);

                        //Cuadruplo.displayCuadruplo(quad);

                        cuadruplos.addElement(quad); // Agregarlo a la queue de cuadruplos
                    }
                }
  }

// Punto 9, si hay operadores booleanos pendientes...
  final public void PendingOperatorBool() throws ParseException {String o, op1,  op2, r;
// Si la pila no esta vacía
                if( !pOperators.empty()) {

                        // Y el tope de la pila es > < <> o ==
                        if ( pOperators.peek() == ">" || pOperators.peek() == "<" ||
                                pOperators.peek() == "<>" || pOperators.peek() == "=="  ) {

                                // Sacar los operandos y el operador de las pilas
                                op2 = (String)pOperands.pop();
                                op1 = (String)pOperands.pop();
                                o = (String)pOperators.pop();
                                r = "t" + currentTemporal;

                                currentTemporal++;

                                //System.out.println( r );

                                // Crear un cuadruplo y meterlos
                                Cuadruplo quad = new Cuadruplo(o, op1, op2, r);
                                quadCounter++;

                        pOperands.push(r);

                        //Cuadruplo.displayCuadruplo(quad);

                        cuadruplos.addElement(quad); // Agregarlo a la queue de cuadruplos
                    }
                }
  }

  final public void MostrarCuadruplos() throws ParseException {
for (int i=0; i < cuadruplos.size(); i++) {
                        System.out.print(i+1 + ": \u005ct");
                        Cuadruplo.displayCuadruplo((Cuadruplo)cuadruplos.get(i));

                }
  }

  final public void Fill(int numQuad, int jump) throws ParseException {
Cuadruplo quad = (Cuadruplo)cuadruplos.get(numQuad);

                quad.resultado = "" + (jump+1);

                //System.out.print("Se acaba de hacer un fill: ");
                //Cuadruplo.displayCuadruplo(quad);

  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_3_7()
 {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_5()
 {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3R_17()
 {
    if (jj_scan_token(TK_PRINT)) return true;
    if (jj_scan_token(TK_LPAR)) return true;
    return false;
  }

  private boolean jj_3R_16()
 {
    if (jj_scan_token(TK_INPUT)) return true;
    if (jj_scan_token(TK_LPAR)) return true;
    return false;
  }

  private boolean jj_3R_15()
 {
    if (jj_scan_token(TK_RIGHT)) return true;
    if (jj_scan_token(TK_LPAR)) return true;
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_scan_token(TK_ID)) return true;
    return false;
  }

  private boolean jj_3R_14()
 {
    if (jj_scan_token(TK_LEFT)) return true;
    if (jj_scan_token(TK_LPAR)) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_scan_token(TK_ID)) return true;
    if (jj_scan_token(TK_LBRACKET)) return true;
    return false;
  }

  private boolean jj_3_8()
 {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3R_13()
 {
    if (jj_scan_token(TK_FORWARD)) return true;
    if (jj_scan_token(TK_LPAR)) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3R_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_13()) {
    jj_scanpos = xsp;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_3R_15()) {
    jj_scanpos = xsp;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) {
    jj_scanpos = xsp;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_22()
 {
    if (jj_scan_token(TK_HOME)) return true;
    if (jj_scan_token(TK_LPAR)) return true;
    return false;
  }

  private boolean jj_3R_11()
 {
    if (jj_scan_token(TK_ID)) return true;
    if (jj_scan_token(TK_LPAR)) return true;
    return false;
  }

  private boolean jj_3R_21()
 {
    if (jj_scan_token(TK_CURVE)) return true;
    if (jj_scan_token(TK_LPAR)) return true;
    return false;
  }

  private boolean jj_3R_20()
 {
    if (jj_scan_token(TK_MOVE)) return true;
    if (jj_scan_token(TK_LPAR)) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_scan_token(TK_ID)) return true;
    if (jj_scan_token(TK_LBRACKET)) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_scan_token(TK_ID)) return true;
    if (jj_scan_token(TK_EQ)) return true;
    return false;
  }
